# osm-admin-boundaries-experiments

./: .gitignore  Cargo.toml  filter.sh  readme.md  rustfmt.toml
overpass/: overpass.js
sources/: planet-latest.osm.pbf.torrent
src/: converter.rs  eject_via_overpass.rs  eject_via_planet.rs  filter.rs  main.rs  mod.rs  to_csv.rs  utils.rs
src/extract/: converter.rs  find_relations.rs  mod.rs
