[package]
name = "rs-osm"
version = "0.1.0"
edition = "2021"

[profile.release]
debug-assertions = false
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
osm-io = { version = "*" }
geo = { version = "0.28.0", features = [] }
geojson = { version = "0.24.1" }
serde_json = "1.0.117"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
geo-types = "0.7.13"
rayon = "1.10.0"
