[package]
name = "rs-osm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
osm-io = { version = "0.1" }
geo = { version = "0.28", features = ["use-serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
anyhow = "1"
rayon = "1"
osmpbfreader = "0.16.1"
indicatif = "0.17.8"
smartstring = "1.0.1"
chrono = "0.4.38"
bincode = "1.3.3"
parking_lot = { version = "0.12", features = ["nightly"] }
deepsize = "0.2.0"
rstar = "0.12.0"
structstruck = "0.4.1"
geojson = "0.24.1"
